welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:8: error: not found: value estSurBlanc
	} while (estSurBlanc())
                 ^PictureMono:13: error: not found: value estSurBlanc
	} while (!estSurBlanc())
                  ^